# fb-cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.posix.template  CMakeUserPresets.json.windows.template  LICENSE.md  README.md  check-format.sh  gen-linux-debug.sh  gen-linux-release.sh  gen-linux-x64-debug.sh  gen-linux-x64-release.sh  gen-osx-arm64-debug.sh  gen-osx-arm64-release.sh  gen-windows.bat  run-format.sh  run-tests.bat  run-tests.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: main.yml  pull-request.yml
agents/codex-cloud/scripts/: maintenance.sh  setup.sh
cmake/: BoostTestAddTests.cmake  cmake-default.bat  cmake-default.sh  ctest-default.bat  ctest-default.sh  fb-cppConfig.cmake.in  posix-ninja-debug.sh  posix-ninja-release.sh  windows-vs2022.bat
cmake/triplets/: arm64-osx.cmake  x64-linux.cmake
doc/: CMakeLists.txt  Doxyfile  custom.css  header.html
src/fb-cpp/: Attachment.cpp  Attachment.h  BackupManager.h  Batch.cpp  Batch.h  Blob.h  CMakeLists.txt  CalendarConverter.h  Client.cpp  Client.h  Descriptor.h  EventListener.cpp  Exception.cpp  Exception.h  NumericConverter.h  Row.h  RowSet.cpp  RowSet.h  SmartPtrs.h  Statement.cpp  Statement.h  StructBinding.h  Transaction.cpp  Transaction.h  fb-cpp.h
src/lib/: Attachment.h  Blob.cpp  Blob.h  CMakeLists.txt  CalendarConverter.h  Descriptor.h  EventListener.cpp  Exception.h  NumericConverter.h  SmartPtrs.h  Statement.h  Transaction.cpp  Transaction.h  fb-api.h  fb-cpp.h  types.h
src/lib/fb-api/firebird/: fb_c_api.h
src/test/: Attachment.cpp  BackupManager.cpp  Batch.cpp  Blob.cpp  CMakeLists.txt  CalendarConverter.cpp  Client.cpp  EventListener.cpp  Exception.cpp  NumericConverter.cpp  RowSet.cpp  ScrollableCursor.cpp  Statement.cpp  Statement2.cpp  TestUtil.cpp  TestUtil.h  Transaction.cpp  Transaction2PC.cpp
